test/expected/declare_a_cd_i.out
declare x as carries-dependency int
        ^
9: error: "carries_dependency" can only appear on functions or parameters
